@@ -8,22 +8,31 @@ import com.sun.tools.javac.main.JavaCompiler
 import com.sun.tools.javac.util.Context
 import org.eclipse.lsp4j.Position
 import org.eclipse.lsp4j.Range
-import java.io.OutputStreamWriter
+import java.io.Writer
 import java.nio.file.Path
 import java.util.*
+import javax.tools.Diagnostic
+import javax.tools.DiagnosticListener
 import kotlin.collections.HashMap
 import kotlin.collections.HashSet
 
 class DocumentIndexer(
-    private val projectRoot: String,
     private val verbose: Boolean,
     private val path: Path,
     private val projectId: String,
     private val emitter: Emitter,
-    private val indexers: Map<Path, DocumentIndexer>
+    private val indexers: Map<Path, DocumentIndexer>,
+    private val classpath: Classpath,
+    private val javaSourceVersion: String,
+    private val javacOutput: Writer?
 ) {
     companion object {
         private val systemProvider = JavacTool.create()
+    }
+    
+    data class DefinitionMeta(val rangeId: String, val resultSetId: String) {
+        var definitionResultId: String? = null
+        val referenceRangeIds = HashMap<String, MutableSet<String>>()
     }
 
     private lateinit var documentId: String
@@ -33,6 +42,10 @@ class DocumentIndexer(
     private lateinit var fileManager: SourceFileManager
     
     private val referencesBacklog: LinkedList<() -> Unit> = LinkedList()
+    
+    var javacDiagnostics = LinkedList<Diagnostic<out Any>>()
+        private set
+    private val diagnosticsListener = DiagnosticListener<Any> { javacDiagnostics.add(it) }
 
     fun numDefinitions(): Int {
         return definitions.size
@@ -55,28 +68,19 @@ class DocumentIndexer(
         val (task, compUnit) = analyzeFile()
         IndexingVisitor(task, compUnit, this, indexers).scan(compUnit, null)
         referencesBacklog.forEach { it() }
+
+        //javacDiagnostics.forEach(::println)
+
+        println("finished analyzing and visiting $path")
     }
 
     private fun analyzeFile(): Pair<JavacTask, CompilationUnitTree> {
         val context = SimpleContext()
+
+        // TODO(nsc) diagnosticsListener not being null seems to interfere with javacOutput
         val task = systemProvider.getTask(
-            OutputStreamWriter.nullWriter(), fileManager, null,
-            listOf("--enable-preview", "-source", "15", "--add-exports",
-                "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                "--add-exports",
-                "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                "--add-exports",
-                "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                "--add-exports",
-                "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                "--add-exports",
-                "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                "--add-exports",
-                "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-                "--add-exports",
-                "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                "--add-exports",
-                "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"),
+            javacOutput, fileManager, diagnosticsListener,
+            listOf("-source", "8", "-proc:none", "-nowarn", "-source", javaSourceVersion, "-classpath", classpath.toString()),
             listOf(), listOf(SourceFileObject(path)), context
         )
         val compUnit = task.parse().iterator().next()
@@ -87,13 +91,14 @@ class DocumentIndexer(
 
     internal class SimpleContext: Context() {
         init {
-            put(JavaCompiler.compilerKey, SimpleCompiler.factory)
+            put(SimpleCompiler.getContextKey(), SimpleCompiler.factory)
         }
     }
 
     internal class SimpleCompiler(context: Context?): JavaCompiler(context) {
         companion object {
             var factory = Context.Factory<JavaCompiler> { context: Context? -> SimpleCompiler(context) }
+            fun getContextKey(): Context.Key<JavaCompiler> = compilerKey
         }
 
         init {
@@ -175,7 +180,7 @@ class DocumentIndexer(
             }
 
             emitter.emitEdge("item", mapOf(
-                "outV" to meta.definitionResultId,
+                "outV" to meta.definitionResultId!!,
                 "inVs" to arrayOf(meta.rangeId),
                 "document" to indexer.documentId
             ))
@@ -188,10 +193,7 @@ class DocumentIndexer(
     }
     
     private fun mkDoc(signature: String, docComment: String?): String {
-        return """
-            ```java
-            $signature
-            ```""".trimIndent() +
+        return "```java\n$signature\n```" +
             if (docComment == null || docComment == "") "" else
                 "\n---\n${docComment.trim()}"
     }
